k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver    
  replicas: 1
  template:
    metadata:
      labels:
        app: "goserver"
    spec:
      containers:
        - name: goserver
          image: "danielvieiravega/hello-go:v9.6"
          resources:
            requests:
              memory: "20Mi"
              cpu: "0.01"
            limits:
              memory: "25Mi"
              cpu: "0.01"

          startupProbe:
            httpGet:
              path: /healthz
              port: 8000
            #initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            #initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            #initialDelaySeconds: 15

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            #initialDelaySeconds: 10

          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
              readOnly: true
            
            - mountPath: "/go/pvc"
              name: goserver-volume

          # env:
          #   - name: NAME
          #     valueFrom:
          #       configMapKeyRef:
          #         name: goserver-env
          #         key: NAME
          #   - name: AGE
          #     valueFrom:
          #       configMapKeyRef:
          #         name: goserver-env
          #         key: AGE

      
      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc

        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
