k8s/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host2
spec:
  # ingressClassName: nginx # use only with k8s version >= 1.18.0
  # tls:
  rules:
  - host: ingress.danielvieiravega.com.br
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: goserver-service
            port:
              number: 9080
